Unfucked a recursion Added setRain game action Added close actions to roleplay Roll difficulty colors now take modifier into account Added an align inputs feature to node editor Fixed node editor zooming Fixed some incorrect labels on node editor blocks Added hotbuttons for dice roll outcome conditions

--- a/public/libraries/RawNodes.css
+++ b/public/libraries/RawNodes.css
@@ -25,7 +25,6 @@ div.rawNodesWrapper > div.blocks > div.block{
 	position:absolute;
 	border: 3px solid #FFF;
 	border-radius:3px;
-	width:250px;
 	min-height:100px;
 	user-select: none;
 	background:rgba(50,50,50,0.75);
